--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -7,7 +7,10 @@ export { getStaticPaths };
 ---
 
 <Layout title="Gabriela Borraz" description="Rocks">
-  <h2 class="text-xlarge">XLarge – The quick brown fox jumps over the lazy dog</h2>
+  <h2 class="text-xlarge">
+    XLarge – The quick brown fox jumps over the lazy dog
+    <span>soy azulito perdío</span>
+  </h2>
   <h3 class="text-large">Large – The quick brown fox jumps over the lazy dog</h3>
   <p class="text-title">Title – The quick brown fox jumps over the lazy dog</p>
   <p class="text-subtitle">Subtitle – The quick brown fox jumps over the lazy dog</p>
