--- a/src/pages/[...locale]/portfolio/multimedia/index.astro
+++ b/src/pages/[...locale]/portfolio/multimedia/index.astro
@@ -1,7 +1,10 @@
 ---
 import { getStaticPaths } from "../../../../utils/staticPaths";
 
+import Layout from "../../../../layouts/Layout.astro";
+
 export { getStaticPaths };
 ---
-
-Multimedia index
+<Layout title="Gabriela Borraz" description="Rocks" active="portfolio">
+  Multimedia index
+</Layout>
