--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,16 @@
 ---
-const { title, description } = Astro.props;
+const { title, description, active } = Astro.props;
 
 import { getLocaleFromUrl } from "../utils/i18n";
 
 const locale = getLocaleFromUrl(Astro.url)
 
+import Navigation from "../components/Navigation.astro";
+
 export interface Props {
 	title: string;
 	description: string;
+	active?: string;
 }
 ---
 
@@ -26,7 +29,6 @@ export interface Props {
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 
 		<!-- Fonts -->
@@ -43,6 +45,8 @@ export interface Props {
 		<title>{title}</title>
 	</head>
 	<body>
+		<Navigation active={active} />
+
 		<slot />
 	</body>
 </html>
