--- a/src/pages/[...locale]/blog/index.astro
+++ b/src/pages/[...locale]/blog/index.astro
@@ -1,10 +1,13 @@
 ---
 const { locale } = Astro.params;
 
+import Layout from "../../../layouts/Layout.astro";
+
 export const getStaticPaths = async () => {
   return [{ params: { locale: "en" } }, { params: { locale: undefined } }];
 };
 ---
-
-Blog index
-{locale}
+<Layout title="Gabriela Borraz" description="Rocks" active="blog">
+  Blog index
+  {locale}
+</Layout>
