--- a/src/pages/[...locale]/contact.astro
+++ b/src/pages/[...locale]/contact.astro
@@ -3,7 +3,10 @@ const { locale } = Astro.params;
 
 import { getStaticPaths } from "../../utils/staticPaths";
 
+import Layout from "../../layouts/Layout.astro";
+
 export { getStaticPaths };
 ---
-
-Contact page {locale}
+<Layout title="Gabriela Borraz" description="Rocks" active="contact">
+  Contact page {locale}
+</Layout>
