--- a/src/pages/[...locale]/portfolio/design/index.astro
+++ b/src/pages/[...locale]/portfolio/design/index.astro
@@ -1,7 +1,10 @@
 ---
 import { getStaticPaths } from "../../../../utils/staticPaths";
 
+import Layout from "../../../../layouts/Layout.astro";
+
 export { getStaticPaths };
 ---
-
+<Layout title="Gabriela Borraz" description="Rocks" active="portfolio">
 Design index
+</Layout>
