--- a/src/pages/[...locale]/portfolio/index.astro
+++ b/src/pages/[...locale]/portfolio/index.astro
@@ -1,7 +1,10 @@
 ---
 import { getStaticPaths } from "../../../utils/staticPaths";
 
+import Layout from "../../../layouts/Layout.astro";
+
 export { getStaticPaths };
 ---
-
-Portfolio index
+<Layout title="Gabriela Borraz" description="Rocks" active="portfolio">
+  Portfolio index
+</Layout>
