Change default titles and descriptions

--- a/src/pages/[...locale]/about.astro
+++ b/src/pages/[...locale]/about.astro
@@ -7,6 +7,6 @@ import Layout from "../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title="Sobre mí" description="Rocks" active="about">
+<Layout title="Sobre mí" description="About page information SEO" active="about">
   About page {locale}
 </Layout>
