--- a/src/pages/[...locale]/blog/index.astro
+++ b/src/pages/[...locale]/blog/index.astro
@@ -7,7 +7,7 @@ export const getStaticPaths = async () => {
   return [{ params: { locale: "en" } }, { params: { locale: undefined } }];
 };
 ---
-<Layout title="Gabriela Borraz" description="Rocks" active="blog">
+<Layout title="Blog: mi día a día creativo" description="Espacio abierto para compartir y dialogar sobre arte, animación y diseño" active="blog">
   Blog index
   {locale}
 </Layout>
