--- a/src/pages/[...locale]/portfolio/index.astro
+++ b/src/pages/[...locale]/portfolio/index.astro
@@ -5,6 +5,6 @@ import Layout from "../../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title="Gabriela Borraz" description="Rocks" active="portfolio">
+<Layout title="Portafolio de Proyectos" description="Rocks" active="portfolio">
   Portfolio index
 </Layout>
