--- a/src/pages/[...locale]/contact.astro
+++ b/src/pages/[...locale]/contact.astro
@@ -7,6 +7,6 @@ import Layout from "../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title="Gabriela Borraz" description="Rocks" active="contact">
+<Layout title="En contacto" description="Escríbeme, me encantaría saber sobre tu próximo proyecto" active="contact">
   Contact page {locale}
 </Layout>
