--- a/src/pages/[...locale]/faq.astro
+++ b/src/pages/[...locale]/faq.astro
@@ -7,6 +7,6 @@ import Layout from "../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title="Gabriela Borraz" description="Rocks" active="faq">
+<Layout title="Preguntas Frecuentes" description="Respondiendo a Preguntas Frecuentes sobre nuestros servicios de animación y diseño" active="faq">
   FAQ page {locale}
 </Layout>
