--- a/src/pages/[...locale]/portfolio/design/index.astro
+++ b/src/pages/[...locale]/portfolio/design/index.astro
@@ -5,6 +5,6 @@ import Layout from "../../../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title="Gabriela Borraz" description="Rocks" active="portfolio">
+<Layout title="Proyectos de Diseño" description="Rocks" active="portfolio">
 Design index
 </Layout>
