--- a/src/pages/[...locale]/portfolio/multimedia/index.astro
+++ b/src/pages/[...locale]/portfolio/multimedia/index.astro
@@ -5,6 +5,6 @@ import Layout from "../../../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title="Gabriela Borraz" description="Rocks" active="portfolio">
+<Layout title="Proyectos Multimedia" description="Rocks" active="portfolio">
   Multimedia index
 </Layout>
