--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -5,7 +5,7 @@ import Layout from "../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title="Gabriela Borraz" description="Rocks">
+<Layout title="Inicio | Gabriela Borraz" description="Bienvenidos al sitio web de Gabriela Borraz, donde las ideas creativas cobran vida para comunicar, inspirar y conectar">
   <h2 class="text-xlarge">
     XLarge – The quick brown fox jumps over the lazy dog
     <span>soy azulito perdío</span>
