--- a/src/pages/[...locale]/portfolio/index.astro
+++ b/src/pages/[...locale]/portfolio/index.astro
@@ -5,6 +5,6 @@ import Layout from "../../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title="Portafolio de Proyectos" description="Rocks" active="portfolio">
+<Layout title="Portafolio de Proyectos" description="Explora mi portafolio de proyectos y descubre cómo puedo ayudarte a producir una amplia variedad de videos y dar vida a tus ideas" active="portfolio">
   Portfolio index
 </Layout>
