--- a/src/pages/[...locale]/portfolio/[slug].astro
+++ b/src/pages/[...locale]/portfolio/[slug].astro
@@ -7,6 +7,6 @@ export const getStaticPaths = async () => {
   return [{ params: { slug: "project1" } }];
 };
 ---
-<Layout title={slug || ""} description="Rocks" active="portfolio">
+<Layout title={slug || ""} description="Aquí breve descripción del proyecto" active="portfolio">
   Portfolio project {slug}
 </Layout>
