--- a/public/global.css
+++ b/public/global.css
@@ -85,8 +85,6 @@
   --medium-screen: 1008px;
 }
 
-
-
 * {
   margin: 0;
 }
@@ -121,6 +119,25 @@ h2, h3, h4, h5, h6 {
 p {
   /* background-color: yellow; */
   margin: 0 0 8px 0;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+button {
+  padding: 0;
+  line-height: inherit;
+  border: none;
+  background-color: transparent;
+}
+
+a {
+  text-decoration: none;
 }
 
 .text-xlarge {
@@ -175,83 +192,104 @@ p {
 .MuiSvgIcon-fontSizeMedium {
   width: 24px;
   height: 24px;
-}
-
-ul {
-  padding: 0;
-}
-
-li {
-  list-style-type: none;
+  vertical-align: middle;
 }
 
 /* Navigation */
-nav ul {
-  display: flex;
-  align-content: stretch;
-  flex-direction: column;
-  // position: absolute;
-  // top: 0;
-  // right: 0;
-  // bottom: 0;
-  // left: 0;
-  // padding: calc(var(--rythm) * 3);
-  background-color: white;
-}
-
-nav li {
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  flex-grow: 1;
-  box-shadow: 0px -1px 0px 0px var(--grey-lavander-web) inset;
-  display: none;
-
-  &#nav-close, &#nav-burger {
-    flex-grow: 0;
-    align-self: end;
-    box-shadow: none;
-  }
-
-  &#nav-burger {
+nav {
+  & ul {
     display: flex;
-    width: calc(var(--rythm) * 8);
-    height: calc(var(--rythm) * 8);
+    align-content: stretch;
+    flex-direction: column;
+    background-color: white;
   }
 
-  &#nav-close {
-    height: calc(var(--rythm) * 5);
+  & li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &#nav-burger, &#nav-close {
+      align-self: end;
+    }
+
+    &#nav-burger {
+      display: flex;
+      width: calc(var(--rythm) * 8);
+      height: calc(var(--rythm) * 8);
+    }
+
+    &#nav-close {
+      height: calc(var(--rythm) * 3);
+      display: none;
+    }
+
+    &.nav-item {
+      display: flex;
+      align-items: stretch;
+      flex-grow: 1;
+      box-shadow: 0px -1px 0px 0px var(--grey-lavander-web) inset;
+      display: none;
+    }
+
+    &.active {
+      box-shadow: 0px -3px 0px 0px var(--blue-neon) inset;
+    }
   }
 
-  &.active {
-    box-shadow: 0px -3px 0px 0px var(--blue-neon) inset;
+  & a {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    font-size: var(--font-size-title-desktop);
+    font-weight: var(--font-weight-title-desktop);
+    line-height: var(--line-height-title-desktop);
+    color: var(--black-oxford-blue);
   }
-}
 
-nav a {
-  text-decoration: none;
-  display: flex;
-  flex: 1;
-  justify-content: center;
-  align-items: center;
-  font-size: var(--font-size-title-desktop);
-  font-weight: var(--font-weight-title-desktop);
-  line-height: var(--line-height-title-desktop);
-  color: var(--black-oxford-blue);
+  &.nav-mobile-open {
+    & ul {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      padding: calc(var(--rythm) * 3);
+    }
+
+    & li {
+      &#nav-burger {
+        display: none;
+      }
+
+      &#nav-close {
+        display: flex;
+      }
+
+      &.nav-item {
+        display: flex;
+      }
+    }
+  }
 }
 
 @media only screen and (min-width: 1008px) {
-  nav ul {
-    flex-direction: row;
-    padding: 0;
-  }
+  nav {
+    & ul {
+      flex-direction: row;
+    }
 
-  nav li {
-    display: flex;
-    height: calc(var(--rythm) * 8);
+    & li {
+      height: calc(var(--rythm) * 8);
 
-    &#nav-burger, &#nav-close {
-      display: none;
+      &#nav-burger {
+        display: none;
+      }
+
+      &.nav-item {
+        display: flex;
+      }
     }
   }
 }
