Add methods to translate static content

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,7 +3,7 @@ import CloseRoundedIcon from '@mui/icons-material/CloseRounded';
 import MenuRoundedIcon from '@mui/icons-material/MenuRounded';
 
 import { routes } from "../routes";
-import { getLocaleFromUrl } from "../utils/i18n";
+import { getLocaleFromUrl } from '../utils/i18n/utils';
 
 const locale = getLocaleFromUrl(Astro.url);
 
