--- a/src/pages/[...locale]/blog/index.astro
+++ b/src/pages/[...locale]/blog/index.astro
@@ -2,12 +2,15 @@
 const { locale } = Astro.params;
 
 import Layout from "../../../layouts/Layout.astro";
+import { getLocaleFromUrl, useTranslations } from "../../utils/i18n/utils";
+
+const t = useTranslations(locale);
 
 export const getStaticPaths = async () => {
   return [{ params: { locale: "en" } }, { params: { locale: undefined } }];
 };
 ---
-<Layout title="Blog: mi diario creativo" description="Espacio abierto para compartir y aprender sobre animación, diseño, ilustración  y narrativa" active="blog">
+<Layout title={t('blog.index.title')} description={t('blog.index.description')} active="blog">
   Blog index
   {locale}
 </Layout>
