--- a/src/pages/[...locale]/portfolio/index.astro
+++ b/src/pages/[...locale]/portfolio/index.astro
@@ -1,10 +1,14 @@
 ---
 import { getStaticPaths } from "../../../utils/staticPaths";
+import { getLocaleFromUrl, useTranslations } from "../../utils/i18n/utils";
+
+const locale = getLocaleFromUrl(Astro.url);
+const t = useTranslations(locale);
 
 import Layout from "../../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title="Portafolio de Proyectos" description="Explora mi portafolio de proyectos y descubre cómo puedo ayudarte a producir una amplia variedad de videos y dar vida a tus ideas" active="portfolio">
+<Layout title= {t('portfolio.index.title')} description={t('portfolio.index.description')} active="portfolio">
   Portfolio index
 </Layout>
