--- a/src/pages/[...locale]/portfolio/multimedia/index.astro
+++ b/src/pages/[...locale]/portfolio/multimedia/index.astro
@@ -1,10 +1,14 @@
 ---
 import { getStaticPaths } from "../../../../utils/staticPaths";
+import { getLocaleFromUrl, useTranslations } from "../../utils/i18n/utils";
+
+const locale = getLocaleFromUrl(Astro.url);
+const t = useTranslations(locale);
 
 import Layout from "../../../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title="Portafolio multimedia" description="Descubre la magia de los videos animados" active="portfolio">
-  Multimedia index
+<Layout title= {t('portfolio.multimedia.index.title')} description={t('portfolio.multimedia.index.description')} active="portfolio">
+Multimedia index
 </Layout>
