--- a/src/pages/[...locale]/blog/index.astro
+++ b/src/pages/[...locale]/blog/index.astro
@@ -1,9 +1,8 @@
 ---
-const { locale } = Astro.params;
-
 import Layout from "../../../layouts/Layout.astro";
-import { getLocaleFromUrl, useTranslations } from "../../utils/i18n/utils";
+import { getLocaleFromUrl, useTranslations } from "../../../utils/i18n/utils";
 
+const locale = getLocaleFromUrl(Astro.url);
 const t = useTranslations(locale);
 
 export const getStaticPaths = async () => {
