--- a/src/pages/[...locale]/faq.astro
+++ b/src/pages/[...locale]/faq.astro
@@ -1,9 +1,8 @@
 ---
-const { locale } = Astro.params;
-
 import { getStaticPaths } from "../../utils/staticPaths";
 import { getLocaleFromUrl, useTranslations } from "../../utils/i18n/utils";
 
+const locale = getLocaleFromUrl(Astro.url);
 const t = useTranslations(locale);
 
 import Layout from "../../layouts/Layout.astro";
