--- a/src/pages/[...locale]/portfolio/design/index.astro
+++ b/src/pages/[...locale]/portfolio/design/index.astro
@@ -1,14 +1,17 @@
 ---
 import { getStaticPaths } from "../../../../utils/staticPaths";
-import { getLocaleFromUrl, useTranslations } from "../../utils/i18n/utils";
+import { getLocaleFromUrl, useTranslations } from "../../../../utils/i18n/utils";
 
 const locale = getLocaleFromUrl(Astro.url);
 const t = useTranslations(locale);
+
+const title = t('portfolio.design.index.title');
+const description = t('portfolio.design.index.description');
 
 import Layout from "../../../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title= {t('portfolio.design.index.title')} description={t('portfolio.design.index.description')} active="portfolio">
+<Layout title= {title} description={description} active="portfolio">
 Design index
 </Layout>
