--- a/src/pages/[...locale]/blog/index.astro
+++ b/src/pages/[...locale]/blog/index.astro
@@ -10,6 +10,10 @@ export const getStaticPaths = async () => {
 };
 ---
 <Layout title={t('blog.index.title')} description={t('blog.index.description')} active="blog">
-  Blog index
-  {locale}
+  <section class="hero">
+    <h2 class="text-xlarge">
+      Experimenta. Explora.
+      <span>Evoluciona.</span>
+    </h2>
+  </section>
 </Layout>
