--- a/src/pages/[...locale]/portfolio/index.astro
+++ b/src/pages/[...locale]/portfolio/index.astro
@@ -13,5 +13,10 @@ import Layout from "../../../layouts/Layout.astro";
 export { getStaticPaths };
 ---
 <Layout title= {title} description={description} active="portfolio">
-  Portfolio index
+  <section class="hero">
+    <h2 class="text-xlarge">
+      La magia de los videos animados
+      <span>comienza con una idea creativa</span>
+    </h2>
+  </section>
 </Layout>
