--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -11,13 +11,10 @@ import Layout from "../../layouts/Layout.astro";
 export { getStaticPaths };
 ---
 <Layout title={t('home.title')} description={t('home.description')}>
-  <h2 class="text-xlarge">
-    XLarge – The quick brown fox jumps over the lazy dog
-    <span>soy azulito perdío</span>
-  </h2>
-  <h3 class="text-large">Large – The quick brown fox jumps over the lazy dog</h3>
-  <p class="text-title">Title – The quick brown fox jumps over the lazy dog</p>
-  <p class="text-subtitle">Subtitle – The quick brown fox jumps over the lazy dog</p>
-  <p>Default – The quick brown fox jumps over the lazy dog</p>
-  <p class="text-small">Small – The quick brown fox jumps over the lazy dog</p>
+  <section class="hero">
+    <h2 class="text-xlarge">
+      Las ideas cobran vida
+      <span>para comunicar / inspirar / conectar</span>
+    </h2>
+  </section>
 </Layout>
