--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -17,4 +17,32 @@ export { getStaticPaths };
       <span>para comunicar / inspirar / conectar</span>
     </h2>
   </section>
+
+  <section id="featured" class="section">
+    <div class="title">
+      <p class="text-title text-uppercase">Lo más destacado</p>
+      <h4 class="text-large">Proyectos de animación</h4>
+    </div>
+  </section>
+
+  <section id="show-reel">
+    <p>Lo más destacado</p>
+    <h4>Proyectos de animación</h4>
+  </section>
+
+  <section id="collaborations">
+    <p>Lo más destacado</p>
+    <h4>Proyectos de animación</h4>
+  </section>
+
+  <section id="newest">
+    <p>Lo más destacado</p>
+    <h4>Proyectos de animación</h4>
+  </section>
+
+  <section id="contact">
+    <p>Lo más destacado</p>
+    <h4>Proyectos de animación</h4>
+  </section>
+
 </Layout>
