Add class Section to internal pages

--- a/src/pages/[...locale]/blog/index.astro
+++ b/src/pages/[...locale]/blog/index.astro
@@ -16,4 +16,11 @@ export const getStaticPaths = async () => {
       <span>Evoluciona.</span>
     </h2>
   </section>
+
+  <section id="playground" class="section">
+    <div class="title">
+      <p class="text-title text-uppercase">Playgroud</p>
+      <h4 class="text-large">Mi diario creativo</h4>
+    </div>
+  </section>
 </Layout>
