--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -25,24 +25,32 @@ export { getStaticPaths };
     </div>
   </section>
 
-  <section id="show-reel">
-    <p>Lo más destacado</p>
-    <h4>Proyectos de animación</h4>
+  <section id="show-reel" class="section">
+    <div class="title">
+      <p class="text-title text-uppercase">Video</p>
+      <h4 class="text-large">Show Reel 2023</h4>
+  </div>
   </section>
 
-  <section id="collaborations">
-    <p>Lo más destacado</p>
-    <h4>Proyectos de animación</h4>
+  <section id="collaborations" class="section">
+    <div class="title">
+      <p class="text-title text-uppercase">Colaboraciones exitosas</p>
+      <h4 class="text-large">Con grandes marcas y clientes</h4>
+    </div>
   </section>
 
-  <section id="newest">
-    <p>Lo más destacado</p>
-    <h4>Proyectos de animación</h4>
+  <section id="newest" class="section">
+    <div class="title">
+      <p class="text-title text-uppercase">Lo más reciente</p>
+      <h4 class="text-large">Galería de proyectos</h4>
+    </div>
   </section>
 
-  <section id="contact">
-    <p>Lo más destacado</p>
-    <h4>Proyectos de animación</h4>
+  <section id="contact" class="section">
+    <div class="title">
+      <p class="text-title text-uppercase">Escríbeme</p>
+      <h4 class="text-large">Y creemos cosas increíbles</h4>
+    </div>
   </section>
 
 </Layout>
