--- a/src/pages/[...locale]/portfolio/design/index.astro
+++ b/src/pages/[...locale]/portfolio/design/index.astro
@@ -12,6 +12,11 @@ import Layout from "../../../../layouts/Layout.astro";
 
 export { getStaticPaths };
 ---
-<Layout title= {title} description={description} active="portfolio">
-Design index
+<Layout title= {title} description={description} active="portfolio"> 
+      <section id="design" class="section">
+        <div class="title">
+          <p class="text-title text-uppercase">Descubre</p>
+          <h4 class="text-large">Portafolio de diseño</h4>
+        </div>
+      </section>
 </Layout>
