--- a/src/pages/[...locale]/portfolio/index.astro
+++ b/src/pages/[...locale]/portfolio/index.astro
@@ -20,4 +20,18 @@ export { getStaticPaths };
     </h2>
   </section>
 
+  <section id="multimedia" class="section">
+    <div class="title">
+      <p class="text-title text-uppercase">Explora</p>
+      <h4 class="text-large">Portafolio multimedia</h4>
+    </div>
+  </section>
+
+  <section id="design" class="section">
+    <div class="title">
+      <p class="text-title text-uppercase">Descubre</p>
+      <h4 class="text-large">Portafolio de diseño</h4>
+    </div>
+  </section>
+
 </Layout>
