--- a/src/pages/[...locale]/portfolio/multimedia/index.astro
+++ b/src/pages/[...locale]/portfolio/multimedia/index.astro
@@ -13,5 +13,10 @@ import Layout from "../../../../layouts/Layout.astro";
 export { getStaticPaths };
 ---
 <Layout title= {title} description={description} active="portfolio">
-Multimedia index
+    <section id="multimedia" class="section">
+        <div class="title">
+          <p class="text-title text-uppercase">Explora</p>
+          <h4 class="text-large">Portafolio multimedia</h4>
+        </div>
+      </section>
 </Layout>
