Wrap nav and hero in a header element. Add main element

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,7 +45,11 @@ export interface Props {
 		<title>{title}</title>
 	</head>
 	<body>
-		<Navigation locale={locale} active={active} />
+		<header>
+			<Navigation locale={locale} active={active} />
+
+			<slot name="hero" />
+		</header>
 
 		<slot />
 
