--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -18,39 +18,40 @@ export { getStaticPaths };
     </h2>
   </section>
 
-  <section id="featured" class="section">
-    <div class="title">
-      <p class="text-title text-uppercase">Lo más destacado</p>
-      <h4 class="text-large">Proyectos de animación</h4>
+  <main>
+    <section id="featured" class="section">
+      <div class="title">
+        <p class="text-title text-uppercase">Lo más destacado</p>
+        <h4 class="text-large">Proyectos de animación</h4>
+      </div>
+    </section>
+
+    <section id="show-reel" class="section">
+      <div class="title">
+        <p class="text-title text-uppercase">Video</p>
+        <h4 class="text-large">Show Reel 2023</h4>
     </div>
-  </section>
+    </section>
 
-  <section id="show-reel" class="section">
-    <div class="title">
-      <p class="text-title text-uppercase">Video</p>
-      <h4 class="text-large">Show Reel 2023</h4>
-  </div>
-  </section>
+    <section id="collaborations" class="section">
+      <div class="title">
+        <p class="text-title text-uppercase">Colaboraciones exitosas</p>
+        <h4 class="text-large">Con grandes marcas y clientes</h4>
+      </div>
+    </section>
 
-  <section id="collaborations" class="section">
-    <div class="title">
-      <p class="text-title text-uppercase">Colaboraciones exitosas</p>
-      <h4 class="text-large">Con grandes marcas y clientes</h4>
-    </div>
-  </section>
+    <section id="newest" class="section">
+      <div class="title">
+        <p class="text-title text-uppercase">Lo más reciente</p>
+        <h4 class="text-large">Galería de proyectos</h4>
+      </div>
+    </section>
 
-  <section id="newest" class="section">
-    <div class="title">
-      <p class="text-title text-uppercase">Lo más reciente</p>
-      <h4 class="text-large">Galería de proyectos</h4>
-    </div>
-  </section>
-
-  <section id="contact" class="section">
-    <div class="title">
-      <p class="text-title text-uppercase">Escríbeme</p>
-      <h4 class="text-large">Y creemos cosas increíbles</h4>
-    </div>
-  </section>
-
+    <section id="contact" class="section">
+      <div class="title">
+        <p class="text-title text-uppercase">Escríbeme</p>
+        <h4 class="text-large">Y creemos cosas increíbles</h4>
+      </div>
+    </section>
+  </main>
 </Layout>
