--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ import { getLocaleFromUrl } from "../utils/i18n/utils";
 const locale = getLocaleFromUrl(Astro.url);
 
 import Navigation from "../components/Navigation.astro";
+import Footer from '../components/Footer.astro';
 
 export interface Props {
 	title: string;
@@ -52,6 +53,8 @@ export interface Props {
 		</header>
 
 		<slot />
+
+		<Footer />
 
 		<script>
 			import "/src/scripts/main.js";
